CB-24851 add imds version to fms image entity