@@ -1,6 +1,5 @@
 package com.sequenceiq.freeipa.converter.image;
 
-import java.util.Collections;
 import java.util.Map;
 import java.util.Optional;
 
@@ -8,6 +7,7 @@ import org.junit.platform.commons.util.StringUtils;
 import org.springframework.core.convert.converter.Converter;
 import org.springframework.stereotype.Component;
 
+import com.google.common.base.Strings;
 import com.sequenceiq.cloudbreak.cloud.model.Image;
 import com.sequenceiq.cloudbreak.cloud.model.catalog.ImagePackageVersion;
 import com.sequenceiq.common.api.type.InstanceGroupType;
@@ -28,8 +28,10 @@ public class ImageConverter implements Converter<ImageEntity, Image> {
                 source.getImageCatalogUrl(),
                 source.getImageCatalogName(),
                 source.getImageId(),
-                StringUtils.isNotBlank(source.getSourceImage()) ? Map.of(ImagePackageVersion.SOURCE_IMAGE.getKey(), source.getSourceImage()) :
-                        Collections.emptyMap(),
+                StringUtils.isNotBlank(source.getSourceImage()) ?
+                        Map.of(ImagePackageVersion.SOURCE_IMAGE.getKey(), source.getSourceImage(),
+                                ImagePackageVersion.IMDS_VERSION.getKey(), Strings.nullToEmpty(source.getImdsVersion())) :
+                        Map.of(ImagePackageVersion.IMDS_VERSION.getKey(), Strings.nullToEmpty(source.getImdsVersion())),
                 source.getDate(),
                 null);
     }
